# anky-monorepo

./: -  .easignore  .env.example  .gitignore  .gitmodules  .railwayignore  AGENTS.md  ANKY_SKILL_v7.2.md  ANKY_SOURCE_OF_TRUTH.md  ARCHITECTURE_CHANGES.md  ARCHITECTURE_GODS.md  ARCHITECTURE_MAP.md  ARCHITECTURE_TIMELESS_STORIES.md  CLAUDE.md  CURRENT_IMPLEMENTATION_REPORT.md  CURRENT_STATE.md  Cargo.toml  Dockerfile  FAQ.md  GODS_PIPELINE.md  HACKATHON.md  IOS_AGENT_PROMPT.md  IOS_PROTOCOL_UPDATE.md  Makefile  POIESIS.md  PRIVACY_POLICY.md  README.md  SPEC.md  SWIFT_AGENT_BRIEF.md  TERMS_OF_SERVICE.md  THE_ANKY_MODEL.md  UNDERSTANDING_ANKY.md  WHITEPAPER.aux  WHITEPAPER.out  WHITEPAPER.tex  WHITEPAPER.toc  anky-chamber.html  anky-writing-rite.html  livestream-episode-2.html  memetics-homepage.html  (+13 more)
client/: .env.development  .gitignore  index.html  orbiter.json  package.json  vite.config.ts
contracts/: AnkyMirrors.sol
deploy/: README.md  anky-heart.service  anky-mind.service  anky-worker.service
docs/: GODS_PIPELINE_README.md  OPERATIONS.md  anky-submit-idempotency.md  anky-x-presence.md  build.js  gods-pipeline-architecture.md  local-first-protocol.md  mobile-ios-now-seed-spec.md  mobile-seed-identity.md  orbiter.json  package-lock.json  package.json
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
handoff/: IOS_LOCAL_FIRST_PROMPT.md  PRIVACY_AUDIT.md  claude_monorepo_context_2026-04-02.md
interview-engine/: audio.py  brain.py  compositor.py  memory.py  requirements.txt  server.py
locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  zh.json
migrations/: 001_init.sql  002_solana_mirrors.sql  003_mirror_items.sql  004_farcaster_notifications.sql  005_farcaster_prompts.sql  006_farcaster_wallets.sql  007_altar_burns.sql  008_qr_auth.sql  009_sealed_sessions.sql  010_mirror_writing_session.sql  011_anky_mint.sql  012_now.sql  013_profile_kingdom_cache.sql  014_profile_portrait_cache.sql  015_writing_sessions_user_id_index.sql  016_anky_submit_idempotency.sql  017_mobile_solana_integration.sql  018_mobile_native_credit_purchases.sql  019_credit_ledger_entries.sql  019_mobile_verified_seal_receipts.sql  020_mobile_helius_webhook_events.sql  021_mobile_helius_webhook_signature_dedupe.sql  022_mobile_helius_webhook_signature_dedupe.sql  023_mobile_proof_jobs.sql  024_mobile_proof_job_recovery_statuses.sql  025_mobile_sponsorship_events.sql  027_redact_mobile_reflection_job_payloads.sql  20260317_001_create_child_profiles.sql  20260317_002_create_cuentacuentos.sql  20260317_003_create_cuentacuentos_images.sql
miniapp/: index.html  package-lock.json  package.json  vite.config.ts
prompts/: cuentacuentos_system.md  generate_anky_soul_from_research.md  gods-pipeline-research.md  mobile_onboarding_heart_flux_pack.md  run_research_prompt.md
research_prompts/: chakras_story_research.md
runbooks/: devnet-0xx1-live-e2e-evidence.json  (+12 more)
solana/anky-seal-program/programs/anky-seal-program/: Cargo.toml
solana/anky-seal-program/programs/anky-seal-program/src/: lib.rs
solana/anky-zk-proof/sp1/script/: Cargo.toml
src/: config.rs  (+7 more)
(+1100 files in other folders)
