[package]
name = "anky"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "set-header", "limit"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tera = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
tower = "0.5"
tower-cookies = "0.10"
axum-extra = { version = "0.10", features = ["cookie"] }
async-stream = "0.3"
futures = "0.3"
time = "0.3"
