[package]
version = "0.1.0"
name = "anky-sp1-script"
edition = "2021"
default-run = "anky-sp1"

[[bin]]
name = "anky-sp1"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
anky-zk-proof = { path = "../.." }
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
hex = "0.4"
serde_json = "1"
sp1-sdk = { version = "6.1.0", features = ["blocking"] }
tracing = "0.1"

[build-dependencies]
sp1-build = { version = "6.1.0" }
